<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/Sample_LinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="355dp"
            android:background="#00ff0000"
            android:onClick="showDataPicker"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/calendar"
            android:contentDescription="@string/calender" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="88dp"
            android:background="@drawable/backgroundwall"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="108dp"
                android:layout_height="95dp"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:src="@drawable/flowerdaisy"
                android:contentDescription="@string/questionflower" />

            <TextView
                android:id="@+id/todayQuestion"
                android:layout_width="286dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/ant"
                android:textColor="@color/black"
                android:gravity="start"
                android:text="@string/todayquestion"
                android:textSize="30sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/alarm"
                android:textSize="20sp"
                android:fontFamily="@font/app_main_font"
                android:id="@+id/notifi"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ListView
                    android:id="@+id/questionlist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/customquestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="15sp"
        android:backgroundTint="#59886B"
        android:src="@drawable/settings"
        android:contentDescription="@string/todo" />
</FrameLayout>